--- a/pyshop/templates/base.html
+++ b/pyshop/templates/base.html
@@ -14,8 +14,13 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#"> PyShop</a>
+  </nav>
+<div class="container">
   { % block content % }
   { % endblock % }
+</div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
